psp-migration-cel/restrict-adding-capabilities/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod08
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod09
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add:
        - CHOWN
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
