psp-migration-cel/restrict-adding-capabilities/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
            - CAP_CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      - name: container02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CAP_CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CAP_CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CAP_CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
                - NET_BIND_SERVICE
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          - name: container02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_BIND_SERVICE
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_BIND_SERVICE
                - CAP_CHOWN
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
                - CAP_CHOWN
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - SYS_ADMIN
---
