psp-migration-cel/restrict-adding-capabilities/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-restrict-adding-capabilities
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
